--- a/tutorial/5_wrapping-up.mdx
+++ b/tutorial/5_wrapping-up.mdx
@@ -1,10 +1,10 @@
 ---
 title: Wrapping Up
-next_page: 0_structure
-prev_page: 4_frontend
+next_page: 6_recap
+prev_page: 4_broadcasting
 ---
 
-Congratulations! You've successfully completed a Staking API flow and have delegated NEAR tokens on the testnet. 
+Congratulations! You've successfully completed a Staking API flow and have delegated NEAR tokens to a testnet validator. 
 Those tokens will continue to earn staking rewards for as long as they are delegated to an active validator.
 
 <Image
@@ -14,7 +14,3 @@ Those tokens will continue to earn staking rewards for as long as they are deleg
     height={400}
     className="tutorial_inline_image"
 />
-
-## Integrated, Delegated
-
-You can also check out an example of how to use the <Link href="https://docs.figment.io/api-reference/node-api/near" rel="noopener noreferrer" target="_blank">NEAR Node API</Link> to search for specific transactions in the file `pages/transaction-search.tsx`.
