Complete tutorial draft

--- a/tutorial/2_submit-data.mdx
+++ b/tutorial/2_submit-data.mdx
@@ -1,7 +1,7 @@
 ---
 title: Submit Data to the Staking API
 prev_page: 1_integration
-next_page: 3_payload-signing
+next_page: 3_sign-payload
 ---
 
 Once a flow has been initialized, the next step is to submit the necessary data to continue that flow.
