--- a/tutorial/4_broadcasting.mdx
+++ b/tutorial/4_broadcasting.mdx
@@ -1,7 +1,7 @@
 ---
 title: Broadcasting Signed Payloads
 prev_page: 3_sign-payload
-next_page: 5_wrapping-up
+next_page: 5_get-state
 ---
 
 ## Useful data
