--- a/tutorial/6_wrapping-up.mdx
+++ b/tutorial/6_wrapping-up.mdx
@@ -1,7 +1,7 @@
 ---
 title: Wrapping Up
-next_page: 6_recap
-prev_page: 4_broadcasting
+next_page: 7_recap
+prev_page: 5_get-state
 ---
 
 Congratulations! You've successfully completed a Staking API flow and have delegated NEAR tokens to a testnet validator. 
